# OpenBenchPublisher

./: .dockerignore  .env.example  .gitignore  README.md  main.py  mcp_agent.config.yaml  mcp_stdio_server.py  pyproject.toml
apps/: mcp_agent_main.py  web_ui.py
obp/: __init__.py  cards.py  config.py  dagster_defs.py  db.py  downloader.py  embeddings.py  export.py  mcp_server.py  media_samples.py  pipeline.py  tavily_client.py
obp-paper-analyser/: .gitignore  README.md  requirements.txt
obp-paper-analyser/obp-pa/: claims.py  config.py  db.py  embeddings.py  llm.py  mcp_server.py  paper_analysis.py  paper_search.py  tavily_client.py
obp-paper-analyser/obp-pa/web/: app.js  index.html  styles.css
obp/agents/: __init__.py  dataset_smith.py  foundational_gatherer.py
scripts/: cloud-deploy-aws.sh  cloud-deploy-railway.sh  deploy.sh
tests/: test_dataset_smith_multiclass.py  test_end_to_end.py  test_foundational_agent.py  test_labeled_corpus.py  test_mcp_numerical_corpus_tool.py  test_mcp_text_corpus_tool.py
web-ui-next/: next.config.js  package-lock.json  package.json
web-ui-next/src/app/: layout.tsx  page.tsx  page_old.tsx
web-ui-next/src/app/api/chat/: route.ts
web-ui-next/src/app/api/chats/: route.ts
web-ui-next/src/app/api/datasets/: route.ts
web-ui-next/src/components/: BuildForm.tsx  Card3D.tsx  ChatInterface.tsx  ChatInterface_old.tsx  ClientOnly.tsx  CollapsibleSection.tsx  CyberBackground.tsx  Dashboard.tsx  DatasetCard.tsx  FullDownload.tsx  OverviewPanel.tsx  PlanOverview.tsx  RunHistory.tsx  Sidebar.tsx
(+9 files in other folders)
